[package]
authors = ["Adnan Ademovic <adnanademovic100@gmail.com>"]
description = "Bindings for the FLANN library"
license = "MIT"
name = "flann"
readme = "README.md"
repository = "https://github.com/adnanademovic/rust-flann"
version = "0.0.2"

[dependencies]
generic-array = "0.9.0"

[dependencies.flann-sys]
path = "flann-sys"
version = "0.0.1"
