[package]
authors = ["Adnan Ademovic <adnanademovic100@gmail.com>"]
description = "FFI bindings for the FLANN library"
license = "MIT"
name = "flann-sys"
readme = "../README.md"
repository = "https://github.com/adnanademovic/rust-flann"
version = "0.0.4"

[build-dependencies]
bindgen = "0.32.1"
cc = "1.0.3"
cmake = "0.1.35"
